# FFmpegDemo

./: test.txt
ffmpegdemo/app/: CMakeLists.txt  build.gradle
ffmpegdemo/app/src/androidTest/java/com/jinhe/ffmpegdemo/: ExampleInstrumentedTest.kt
ffmpegdemo/app/src/main/: AndroidManifest.xml
ffmpegdemo/app/src/main/cpp/: native-lib.cpp
ffmpegdemo/app/src/main/java/com/jinhe/ffmpegdemo/: MainActivity.kt  VideoView.kt
ffmpegdemo/app/src/main/res/layout/: activity_main.xml
ffmpegdemo/app/src/test/java/com/jinhe/ffmpegdemo/: ExampleUnitTest.kt
ffmpegdemo/gradle/wrapper/: gradle-wrapper.properties
